@@ -19,6 +19,11 @@ Library
 - Issue #10198: fix duplicate header written to wave files when writeframes()
   is called without data.
 
+- Issue #10467: Fix BytesIO.readinto() after seeking into a position after the
+  end of the file.
+
+- Issue #1682942: configparser supports alternative option/value delimiters.
+
 Build
 -----
 
